php.net |  support |  documentation |  report a bug |  advanced search |  search howto |  statistics |  random bug |  login
Bug #76754 parent private constant in extends class memory leak
Submitted: 2018-08-16 19:32 UTC Modified: -
From: twose at qq dot com Assigned:
Status: Closed Package: Scripting Engine problem
PHP Version: master-Git-2018-08-16 (Git) OS: Linux
Private report: No CVE-ID: None
 [2018-08-16 19:32 UTC] twose at qq dot com
Description:
------------
parent private constant in extends class memory leak

Test script:
---------------
<?php

class FOO
{
    private const FOO = 'BAR';
}

class BAR extends FOO { }

Actual result:
--------------
[Fri Aug 17 01:46:16 2018]  Script:  '/path/to/private_const.php'
/path/to/php-src/Zend/zend_hash.c(140) :  Freeing 0x000000010de6cb40 (288 bytes), script=/path/to/private_const.php
=== Total 1 memory leaks detected ===

Patches

Pull Requests

History

AllCommentsChangesGit/SVN commitsRelated reports
 [2018-08-17 05:36 UTC] laruence@php.net
Automatic comment on behalf of laruence@gmail.com
Revision: http://git.php.net/?p=php-src.git;a=commit;h=04c4854fdfbc11b2b6a2cf1c8045f2efcd5dcdcc
Log: Fixed bug #76754 (parent private constant in extends class memory leak)
 [2018-08-17 05:36 UTC] laruence@php.net
-Status: Open +Status: Closed
 [2018-08-17 09:03 UTC] twose at qq dot com
check the correct constant table size is better, is it?
https://github.com/php/php-src/pull/3447
 
PHP Copyright © 2001-2026 The PHP Group
All rights reserved.
Last updated: Fri Sep 25 13:00:02 2026 UTC