Fixed bug #76754 (parent private constant in extends class memory leak)